crates/oxidizer/tests/ui/unknown_ffi_type_attr.stderr
error: unknown ffi_type attribute: `mrkr`. Expected `marker`
 --> tests/ui/unknown_ffi_type_attr.rs:3:1
  |
3 | #[ffi_type(mrkr)]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ffi_type` (in Nightly builds, run with -Z macro-backtrace for more info)
