crates/oxidizer/tests/ui/unknown_ffi_type_attr.rs
use oxidizer::ffi_type;

#[ffi_type(mrkr)]
pub struct MyStruct {
    pub x: u32,
}

fn main() {}
